# mutliclass_classification

./: .gitignore  README.md  config.yml  pyproject.toml
notebooks/: bayesian_hyp_tuning.ipynb  obesity_risk_prediction.ipynb
